Improve AutoIndentWriter robustness
Signed-off-by: Jens Bannmann <jens.b@web.de>